# weather-morning-report

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  compose.yaml  package-lock.json  package.json  pyproject.toml
commands/: announce.js  cleanup.js  clear-cache.js  last.js  refresh.js  runner.js  send-email-now.js  setup.js  status.js  weather-command.js
core/: period-schedule.js  weather-provider.js  wttr-parser.js
docs/: CHAT_TRANSCRIPT.md  DESIGN.md  MIGRATION_NOTES.md  OPENPET_EXTENSION_ECOSYSTEM_BOUNDARY.md  OPENPET_PLUGIN_REFACTOR_PLAN.md  PLUGIN_CONTRACT.md  README.md  RELEASE.md  V3_ARCHITECTURE.md  V4_VALIDATION.md  V5_DEVELOPMENT.md  VERSION_HISTORY.md  WEATHER_MORNING_REPORT_EXTENSION_MIGRATION.md  deployment.md  docker-deployment.md
extension/: plugin.json
legacy-assets/: README.md
openpet-plugin/: README.md  config.schema.json  index.js  plugin.json
rendering/: email-renderer.js  email-template-options.js
scripts/: build-plugin.js  check-extension-artifact.js  check-plugin-artifact.js  openpet-runtime-smoke.js  package-extension.js  package-plugin.js
service/: app.js  dashboard-auth.js  index.js  paths.js
src/: activate.js  commands.js  config.js  recommendation-engine.js  text-renderer.js  wttr-parser.js
static/: app.css
tests/: architecture-boundary.test.js  commands-integration.test.js  email-renderer.test.js  email-send-now.test.js  extension-commands.test.js  extension-package.test.js  openpet-build.test.js  openpet-bundle-runtime.test.js  openpet-extension-validate.test.js  openpet-phase1.test.js  openpet-runtime-smoke.test.js  openpet-scripts.test.js  openpet-validate-zip.test.js  package-plugin.test.js  period-schedule.test.js  recommendation-engine.test.js  scheduler-queue.test.js  service-app.test.js  test_cache.py  test_cli.py  test_messages.py  test_models.py  test_periods.py  test_recommendations.py  test_rendering.py  test_service.py  test_settings.py  test_smtp.py  test_v3_auth_ui.py  test_v3_backups.py  test_v3_configuration.py  test_v3_database.py  test_v3_jobs.py  test_v3_service.py  test_webui.py  test_wttr_provider.py  (+3 more)
(+105 files in other folders)
