[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-morning-report"
version = "0.2.0"
description = "Action-oriented weather reports for one or many recipients"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Weather Morning Report Contributors" }]
dependencies = [
    "alembic>=1.14,<2",
    "argon2-cffi>=23.1,<26",
    "cryptography>=44,<47",
    "fastapi>=0.115,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy>=2.0,<3",
    "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.28,<1",
]

[project.scripts]
weather-report = "weather_morning_report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
weather_morning_report = [
    "migrations/*.py",
    "migrations/versions/*.py",
    "templates/*.html",
    "static/*.css",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["weather_morning_report"]

[tool.coverage.report]
show_missing = true
skip_covered = true
